# morai_roach

./: .gitignore  README.md  pyproject.toml  requirements.txt  train_rl.py
agents/rl_birdview/: rl_birdview.py
collected_data/bev_test/: masks_01183.npy  masks_01188.npy  masks_01190.npy  masks_01191.npy  masks_01192.npy  masks_01193.npy  masks_01194.npy  masks_01195.npy  masks_01196.npy  masks_01197.npy  masks_01198.npy  masks_01199.npy  masks_01200.npy  masks_01201.npy  masks_01203.npy  masks_01204.npy  masks_01205.npy  masks_01206.npy  masks_01207.npy  masks_01208.npy  masks_01209.npy  masks_01210.npy  masks_01211.npy  masks_01212.npy  masks_01213.npy  masks_01214.npy  masks_01215.npy  masks_01217.npy  masks_01218.npy  masks_01219.npy  masks_01220.npy  masks_01221.npy  masks_01222.npy  masks_01223.npy  masks_01224.npy  masks_01225.npy  masks_01226.npy  masks_01227.npy  masks_01228.npy  masks_01229.npy  (+20 more)
config/: birdview.yaml  train_rl.yaml
data_collector/: README.md  collect.py  requirements.txt
data_collector/config/: collection_config.yaml
data_collector/core/: README.md  data_writer.py  episode_manager.py  scenario_params.py
data_collector/expert/: expert_controller.py
data_collector/ros/: ros_manager.py
data_collector/simulator/: morai_client.py
docs/perception/: OFFLINE_ROAD_H5.md
morai_gym/: __init__.py
morai_gym/core/: __init__.py
network/: README.md  __init__.py  ipconfig.json  receiver.py  udp_manager.py
network/UDP/: README.md  (+3 more)
run/: find_mapping_stopline.py  find_stopline.py  linking.py  test_bev_dynamic.py  test_traffic_light.py
(+37 files in other folders)
